<resources>
    <string name="app_name">1114049_1090780_iiatimd_app</string>
    <string name="bottom_menu_home">Home</string>
    <string name="bottom_menu_list">Overzicht</string>
    <string name="bottom_menu_search">Zoek</string>
    <string name="bottom_menu_account">Account</string>
    <string name="home_title_string">Recepten</string>
    <string name="home_welcome_string">Geen zin om lang in de keuken te staan? Of om lang bezig te zijn om een recept uit te zoeken? Dan zit je hier op de juiste plek. Alle recepten zijn geschreven door studenten, voor studenten zodat je minder tijd kwijt bent met koken. Eetsmakelijk!</string>
    <string name="search_text">Zoek hier naar een bestaand recept! Je kan zoeken op titel of beschrijving.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_recipe_detail">recipeDetailActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="actionButtonContentDescription">Content description for actionButton</string>

    <!-- Strings used for search functionality   -->
    <string name="zoek_button">Zoek</string>

    <!--    Strings pertaining to new recipe screens-->
    <string name="newRecipeHeaderText">Voeg een nieuw recept toe!</string>
    <string name="newRecipeTitleHint">Receptnaam</string>
    <string name="newRecipeShortDescriptionHint">Korte beschrijving</string>
    <string name="newRecipeDescriptionHint">Uitgebreide beschrijving van het recept</string>
    <string name="newRecipePrepTimeMinHint">Hoe lang duurt het koken?</string>
    <string name="newRecipeSubmitButtonText">Voeg toe</string>
    <string name="tooManyCharacters">Tekst is te lang!</string>

    <!--    String pertaining to recipe detail view-->
    <string name="recipeDetailTitlePlaceholder">Dit is de titel van het recept</string>
    <string name="recipeDetailDescriptonShortPlaceholder">Dit is de korte beschrijving van het recept</string>
    <string name="recipeDetailDescriptionPlaceholder">Dit is de beschrijving van het recept</string>
    <string name="recipeDetailPrepTimeMinPlaceholder">42</string>

    <!--    String pertaining to instructions card-->
    <string name="instructionStepPrefix">Stap</string>
    <string name="instructionsHeader">Instructies</string>

    <!--    String pertaining to ingredients card-->
    <string name="ingredientsHeader">Ingrediënten</string>
    <string name="editIngredientNameHint">Ingrediëntnaam</string>
    <string name="editIngredientAmountHint">Hoeveelheid</string>

    <!--    Strings pertaining to new ingredients screen-->
    <string name="newIngredientHeader">Voeg een nieuw ingrediënt toe!</string>
    <string name="newIngredientNameHint">Hoe heet het ingrediënt?</string>
    <string name="newIngredientAmountHint">Hoeveelheid van het ingrediënt</string>

    <!--    Strings pertaining to new instructions screen-->
    <string name="newInstructionHeader">Voeg een nieuwe instructie toe!</string>
    <string name="newInstructionDescriptionHint">Wat moet je doen?</string>
    <string name="newInstructionStepNumberHint">Waar in de volgorde komt de instructie terecht?</string>

    <string name="register_profile_button">Register</string>
    <string name="login_profile_button">Login</string>
    <string name="account_naam">Welkom!</string>
    <string name="recepten_van_account_naam">Recepten van \'account naam\'</string>
    <string name="no_account">Je bent op dit moment niet ingelogd. Klik op een van de knoppen om in te loggen of een account aan te maken.</string>
</resources>