<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_menu_page_home"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home"
        android:title="@string/bottom_menu_home"/>
    <item
        android:id="@+id/bottom_menu_page_list"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_list"
        android:title="@string/bottom_menu_list"/>
    <item
        android:id="@+id/bottom_menu_page_search"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search"
        android:title="@string/bottom_menu_search"/>
    <item
        android:id="@+id/bottom_menu_page_account"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_account"
        android:title="@string/bottom_menu_account"/>
</menu>